<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt_main_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/bt_main_logout"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_main_usergive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:background="@color/color_minefragment_top"
        android:onClick="onClick"
        android:text="@string/bt_main_usergive"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_main_userdelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@color/color_minefragment_top"
        android:onClick="onClick"
        android:text="@string/bt_main_userdelete"
        android:textColor="@android:color/background_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt_main_usergive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_main_usergive" />

    <Button
        android:id="@+id/bt_main_dataupdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:background="@color/color_minefragment_top"
        android:onClick="onClick"
        android:text="@string/bt_main_datagive"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_main_usergive" />

    <Button
        android:id="@+id/bt_main_dataget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:background="@color/color_minefragment_top"
        android:onClick="onClick"
        android:text="@string/bt_main_dataget"
        android:textColor="@android:color/background_light"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt_main_dataupdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_main_dataupdate" />

</androidx.constraintlayout.widget.ConstraintLayout>